force-app/main/default/objects/Deapartment__c/Deapartment__c.object-meta.xml
<CustomObject>
    <label>Department</label>
    <nameField>
        <label>Department name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Departments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>