force-app/main/default/objects/Deapartment__c/fields/advisor__c.field-meta.xml
<CustomField>
    <fullName>advisor__c</fullName>
    <label>advisor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>grad- charlson</fullName>
            </value>
            <value>
                <fullName>ug- markinscoff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>