force-app/main/default/objects/Deapartment__c/fields/level_of_study__c.field-meta.xml
<CustomField>
    <fullName>level_of_study__c</fullName>
    <label>level of study</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>graduate</fullName>
            </value>
            <value>
                <fullName>freshman</fullName>
            </value>
            <value>
                <fullName>sophomore</fullName>
            </value>
            <value>
                <fullName>senior</fullName>
            </value>
            <value>
                <fullName>junior</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>