force-app/main/default/objects/Deapartment__c/fields/school__c.field-meta.xml
<CustomField>
    <fullName>school__c</fullName>
    <label>school</label>
    <referenceTo>School__c</referenceTo>
    <relationshipLabel>Departments</relationshipLabel>
    <relationshipName>Departments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>